--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>항해플러스 SNS</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/main-v08gqmao.js"></script>
+    <script type="module" crossorigin src="/front_5th_chapter1-1/assets/hash-CP555LMa.js"></script>
+    <link rel="modulepreload" crossorigin href="/front_5th_chapter1-1/assets/router-CsYSP7dC.js">
   </head>
   <body>
     <div id="root"></div>
